f-dppl/1.0/de.rst
.. _fdppl_v1_de:

Freie Digital Peer Publishing Lizenz (v1, de)
=============================================

HTML Version der freien Digital Peer Publishing Lizenz (Version 1, Deutsch) 

Version 1.0 -- November 2004

Copyright © 2004 Ministerium für Wissenschaft und Forschung des Landes
Nordrhein-Westfalen

Erstellt von Axel Metzger und Till Jaeger, Institut für Rechtfragen der
Freien und Open Source Software, https://www.ifross.org/

Präambel
--------

Das Internet hat die Rahmenbedingungen wissenschaftlichen Arbeitens
tiefgreifend verändert. Dokumente sind in unüberschaubarer Menge in
öffentlich zugänglichen Webangeboten verfügbar. Klassische
Wissenschaftsmedien, wie Fachjournals und Buchpublikationen, werden
durch elektronische Angebote ergänzt oder sogar ersetzt. Zugleich geben
Wissenschaftler Quellen aller Art in Datennetzen im Wege der
Individualkommunikation weiter. Die Digitalisierung ermöglicht die
Veränderung von Dokumenten. Dies erleichtert die interaktive
Zusammenarbeit von Wissenschaftlern. Ein Prozess, der von den führenden
deutschen Forschungsorganisationen mit der Berliner Erklärung (
https://openaccess.mpg.de/Berliner-Erklaerung)
ausdrücklich unterstützt wird.

Diese neuen Möglichkeiten der Kommunikation gestatten eine dezentrale
Verbreitung wissenschaftlicher Inhalte in veränderter oder unveränderter
Form - schnell, transparent und forschungsnah. Wissenschaftler sind
regelmäßig an der weiten, qualitätsvollen Verbreitung ihrer
Forschungsergebnisse interessiert. Die Freie DiPP Lizenz gestattet
deshalb die Weitergabe von urheberrechtlich geschützten Werken. Sie
ermöglicht darüber hinaus die Veränderung von Werken und die Weitergabe
entsprechend veränderter Versionen, um die Zusammenarbeit von
Wissenschaftlern zu erleichtern. Diesen Prozess fair und sicher für alle
Beteiligten zu gestalten, ist Ziel der Freien DiPP Lizenz.

Die Freie DiPP Lizenz bietet die lizenzrechtliche Grundlage für eine
entsprechende Verbreitung von Dokumenten in elektronischer Form, :abbr:`z. B.(zum Beispiel)`
in E-Journals, oder in körperlicher Form, etwa in Druckform oder auf
Trägermedien. Die Nutzung von Werken ist an Pflichten geknüpft. Wer das
Werk unverändert weitergibt, muss die Autoren und Rechtsinhaber nennen
und die verwendeten bibliographischen Angaben beibehalten, um eine
einheitliche Zitierweise zu gewährleisten. Wer veränderte Versionen des
Werkes nutzt, darf die Autoren der ursprünglichen Version nicht mehr als
Urheber benennen, muss aber in geeigneter Weise auf die Vorarbeiten
hinweisen. Auch darf das veränderte Werk nur unter den Bedingungen der
Freien DiPP Lizenz verbreitet werden.

Diese Lizenzbedingungen verstehen sich als Angebot an jedermann auf
Abschluss eines Lizenzvertrages dieses Inhalts. Der Vertrag kommt
dadurch zustande, dass der Nutzer die Rechte aus dem Lizenzvertrag
wahrnimmt.

Als Lizenzgeber kommen entweder die Autoren selbst in Betracht, sofern
die Rechte an den Werken bei ihnen liegen, oder die sonstigen Inhaber
von ausschließlichen Nutzungsrechten an den Werken, insbesondere
Arbeitgeber, Verlage etc. Allerdings ist hierbei zu beachten, dass die
Freie DiPP Lizenz pauschal jede Veränderung des Werks gestattet. Um die
Persönlichkeitsrechte des Urhebers zu schützen ist es deshalb rechtlich
zwingend erforderlich, dass der Urheber der Benutzung dieser Lizenz
stets auch selbst zustimmt, selbst wenn er nicht mehr Inhaber der
ausschließlichen wirtschaftlichen Nutzungsrechte sein sollte.

Abschnitt 1: Definitionen
-------------------------

§ 1: Definitionen
~~~~~~~~~~~~~~~~~

In diesem Lizenzvertrag werden die nachfolgend definierten Begriffe
einheitlich verwendet:

(a) "History": Informationen zu dem Werk, insbesondere zu den Urhebern,
zur Entstehungsgeschichte oder zu der Version des Werkes, die
unmittelbar in das Werk eingefügt oder ihm in einer eigenen Datei
beigefügt werden und die der Information des Nutzers dienen. Die History
kann auch Hinweise darauf enthalten, an welchem Ort der Urheber aktuelle
Versionen des Werks zur Verfügung stellt oder nachträgliche inhaltliche
Korrekturen aufführt.

(b) "Lizenzgeber": Der Inhaber eines ausschließlichen Nutzungsrechts an
dem Werk und/oder der Urheber sowie seine Rechtsnachfolger, die den
Abschluss dieses Lizenzvertrages anbieten.

(c) "Nutzung": Jede Verwendung des Werkes, für die urheberrechtlich eine
Erlaubnis des Urhebers oder des Inhabers eines ausschließlichen
Nutzungsrechts erforderlich ist, :abbr:`z. B.(zum Beispiel)` die unveränderte oder veränderte
Weitergabe des Werkes oder die Bereitstellung zum Download.

(d) "Offenes Dateiformat": Ein Dokumentenformat, das in einem für
jedermann frei einsehbaren Standard beschrieben ist und von jedermann
ohne Beschränkungen und lizenzgebührenfrei in einem Computerprogramm
implementiert werden darf.

(e) "Sie": Der Lizenznehmer - jedermann, der diesen Lizenzvertrag
abschließt.

(f) "Veränderte Version": Jede Version des Werkes, in der Sie oder ein
Dritter Veränderungen vorgenommen haben, unabhängig davon, ob die
Veränderungen selbst die Schwelle der urheberrechtlichen Schutzfähigkeit
erreichen oder nicht. Ausgenommen sind die Fälle, in denen das Gesetz
eine zustimmungsfreie Veröffentlichung und einen zustimmungsfreien
Vertrieb gestattet ("freie Benutzung").

(g) "Vervielfältigungsstück": Ein verkörpertes Werkexemplar, also das
Werk in gegenständlicher Form (:abbr:`z. B.(zum Beispiel)` als gedrucktes Buch oder auf
CD-ROM).

(h) "Werk": Das urheberrechtlich geschützte Werk sowie jeder sonstige,
urheberrechtsschutzfähige Gegenstand (insbesondere Datenbanken und
Fotografien), an dem Nutzungsrechte durch diesen Lizenzvertrag
eingeräumt werden.

Abschnitt 2: Nutzungsrechte
---------------------------

§ 2: Einräumung von Nutzungsrechten an unverändertem Werk
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) Die Einräumung der Nutzungsrechte durch diesen Lizenzvertrag erfolgt
lizenzgebührenfrei.

(2) Dieser Lizenzvertrag erlaubt Ihnen, zeitlich und räumlich
unbeschränkt das Werk auf beliebigen Trägermedien, insbesondere in
Druckform, zu vervielfältigen und zu verbreiten, sowie es Dritten auf
elektronischem Wege zu übermitteln und, insbesondere durch
Bereitstellung zum Download, öffentlich zugänglich zu machen.

(3) Dieser Lizenzvertrag berechtigt Sie ferner, das Werk in
elektronische Datenbanken oder sonstige Sammlungen aufzunehmen. Soweit
Sie dabei eigene Rechte an Datenbanken oder Sammelwerken erwerben,
dürfen Sie diese nicht dafür verwenden, die weitere Nutzung des Werkes
zu beschränken oder zu behindern.

(4) Dieser Lizenzvertrag berechtigt Sie, das Werk Dritten zugänglich zu
machen. Sie können Dritten aber keine Nutzungsrechte an dem Werk
einräumen.

§ 3 Veränderung
~~~~~~~~~~~~~~~

(1) Sie dürfen das Werk in beliebiger Weise verändern und das veränderte
Werk nach den Bestimmungen von § 2 nutzen. Bei einer Veränderung des
Werks sind die geistig-persönlichen Interessen der Urheber zu
respektieren, insbesondere hat eine weitere Nennung als Urheber zu
unterbleiben (siehe § 6 Abs. 2).

(2) Bei einer Veränderung des Werkes müssen Sie seinen Titel verändern.
Hierfür genügt die Aufnahme eines Zusatzes, der die Veränderung des
Werkes kenntlich macht (Versionsnummer o .ä.). Sie dürfen den Titel des
Werkes nicht verändern, wenn das Werk ansonsten inhaltlich unverändert
genutzt wird.

Abschnitt 3: Nutzungsmodalitäten
--------------------------------

§ 4: Keine Pflicht zur Nutzung und zur unentgeltlichen Weitergabe
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) Dieser Lizenzvertrag begründet für Sie keine Pflicht zur Nutzung.
Sie entscheiden, ob und wem Sie eine Kopie des Werks geben oder auf
elektronischem Weg übermitteln. Sie können das Werk daher ohne weiteres
auch in internen Netzen (Intranet) zur Verfügung stellen oder lediglich
einzelnen Personen Kopien geben.

(2) Dieser Lizenzvertrag verpflichtet Sie nicht, die Nutzung des Werkes
unentgeltlich durchzuführen. Für den Zugang zu dem Werk oder die
Verschaffung eines Vervielfältigungsstücks dürfen Sie mit dem Nutzer die
Zahlung eines Entgelts vereinbaren. Sie dürfen jedoch nicht die weitere
Nutzung durch den Erwerber von Gegenleistungen abhängig machen, da er
die dafür erforderlichen Nutzungsrechte nicht von Ihnen erhält, sondern
vom Lizenzgeber.

§ 5: Offener Zugang
~~~~~~~~~~~~~~~~~~~

(1) Wenn Sie das Werk nutzen, dürfen Sie die weitere Nutzung durch
Dritte nicht mittels technischer Schutzmaßnahmen, insbesondere durch den
Einsatz von Kopierschutzvorrichtungen jeglicher Art, verhindern oder
erschweren. Eine passwortgeschützte Zugangsbeschränkung oder die Nutzung
in einem Intranet wird nicht als technische Schutzmaßnahme angesehen.

(2) Wenn Sie das Dokument in einem offenen Dateiformat erhalten haben,
dürfen Sie es nicht ohne vorherige ausdrückliche Zustimmung des Urhebers
oder des Inhabers eines ausschließlichen Nutzungsrechts in einem
nicht-offenen Dateiformat nutzen. Die Zustimmung soll erteilt werden,
wenn wegen des hohen Verbreitungsgrades des Dateiformats ein
verbesserter Zugang zu dem Werk zu erwarten ist und sich das Dateiformat
für die Präsentation des Werkes eignet.

§ 6: Nennung von Urhebern und Nutzungsrechtsinhabern
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) Wenn Sie das Werk unverändert nutzen, müssen Sie die Namensnennung
von Urhebern - :abbr:`z. B.(zum Beispiel)` Urheber- oder Copyrightvermerke - in der
vorgefundenen Art und Weise übernehmen. Gleiches gilt für die Nennung
der Inhaber eines ausschließlichen Nutzungsrechts, sofern diese im
Zusammenhang mit dem Werk genannt werden.

(2) Wenn Sie das Werk in veränderter Form nutzen, dann dürfen die
Urheber des ursprünglichen Werks nicht als Urheber des veränderten Werks
bezeichnet werden. Sie müssen in diesem Fall aber in geeigneter Weise
auf die ursprünglichen Urheber hinweisen, bspw. durch den Vermerk
"Basierend auf einer Studie von xy".

(3) Sie können bei einer nicht völlig unerheblichen Veränderung des
Werks einen Urheberrechtsvermerk mit Ihrem Namen oder Pseudonym
hinzufügen.

(4) Wird das Werk in ein umfassenderes Gesamtangebot eingebunden, etwa
in ein Sammelwerk oder eine Datenbank, müssen Sie die Nennung der
Urheber und der Inhaber eines ausschließlichen Nutzungsrechts in einer
angemessenen und für die Form der Nutzung üblichen Art und Weise
sicherstellen.

§ 7: Zitierung
~~~~~~~~~~~~~~

(1) Um trotz der möglichen dezentralen Verbreitung eine einheitliche
Zitierweise des Werkes und eine dauerhafte Auffindbarkeit des Dokuments
für jedermann zu gewährleisten, dürfen Sie im Rahmen der unveränderten
Nutzung des Werkes bibliographische Angaben zur Originalfundstelle weder
verändern noch entfernen. Sie dürfen aber zusätzliche bibliographische
Angaben hinzufügen.

(2) Wenn Sie das Werk in veränderter Weise nutzen, so müssen Sie die
Fundstelle (insbesondere die vollständige Internetadresse) angeben, an
der Sie das Werk in der von Ihnen für die Veränderung verwendeten Form
erhalten haben.

§ 8: Freigabe von Veränderungen
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) Wenn Sie das Werk in veränderter Weise nutzen, so müssen Sie die
lizenzgebührenfreie Nutzung des gesamten veränderten Werks nach den
Bestimmungen der Freien DiPP Lizenz durch jedermann gestatten.

(2) Sollte es sich bei den von Ihnen hinzugefügten Werkteilen um ein
neues, selbständiges Werk handeln, welches auch isoliert in sinnvoller
Weise genutzt werden kann, so können Sie dieses neue Werk auch unter den
Bedingungen einer anderen Lizenz gemeinsam mit dem ursprünglichen Werk
nutzen.

§ 9: Mitlieferung weiterer Informationen
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) Wenn Sie Nutzungshandlungen vornehmen, die Ihnen aufgrund dieses
Lizenzvertrags gestattet sind, müssen Sie dem Werk stets diesen
Lizenztext in beiden Sprachfassungen beifügen oder eine Quelle angeben,
unter der der Lizenztext auf elektronischem Weg dauerhaft und in
üblicher Weise in beiden Sprachfassungen abrufbar ist, bevorzugt durch
Download aus dem
`Internet <https://lizenzen.hbz-nrw.de/>`__.

(2) Hinweise auf diese Lizenz, die der Urheber oder der Inhaber eines
ausschließlichen Nutzungsrechts dem Werk hinzugefügt hat, dürfen Sie
weder verändern noch entfernen.

(3) Ist dem Werk eine History beigefügt, so dürfen Sie das unveränderte
Werk nur gemeinsam mit der vollständigen und unveränderten History
weitergeben. Wenn Sie das Werk in veränderter Form nutzen, dann müssen
Sie in der History kurz beschreiben, welche Änderungen Sie vorgenommen
haben. Sie können dabei einen Urhebervermerk anbringen.

Abschnitt 4: Abschluss und Beendigung dieses Vertrages; Vorbehalt Ihrer gesetzlichen Rechte
-------------------------------------------------------------------------------------------

§ 10: Vertragsschluss
~~~~~~~~~~~~~~~~~~~~~

Dieser Lizenztext ist ein Angebot an Sie, das auf den Abschluss eines
Lizenzvertrages zu den in diesem Lizenzvertrag genannten Bedingungen
gerichtet ist. Sie können den Lizenzvertrag annehmen, indem Sie die in §
2 des Vertrages genannten Rechte ausüben. Die Annahmeerklärung muss dem
Lizenzgeber nicht zugehen.

§ 11: Heimfall der Nutzungsrechte
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) Wenn Sie die in den §§ 2-9 dieses Vertrages genannten
Verpflichtungen verletzen, entfallen automatisch Ihre durch den
Lizenzgeber mit diesem Vertrag eingeräumten Nutzungsrechte. Sie dürfen
das Werk dann nicht mehr nutzen.

(2) Die Nutzungsbefugnisse Dritter, die das Werk von Ihnen erworben
haben, werden durch einen Heimfall der Nutzungsrechte nicht berührt.

§ 12: Vorbehalt Ihrer gesetzlichen Rechte
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Gegenstand dieser Lizenz ist ausschließlich die Einräumung von
Nutzungsrechten, um das Werk in unveränderter oder veränderter Form zu
vervielfältigen oder zu verbreiten oder der Öffentlichkeit oder
einzelnen Personen in elektronischer Form zugänglich zu machen. Nicht in
den Anwendungsbereich dieser Lizenz fallen diejenigen Befugnisse zur
Nutzung des Werkes, die sich aus den gesetzlichen Beschränkungen des
Urheberrechts ergeben, etwa die Vervielfältigung zum privaten Gebrauch,
das Zitatrecht etc. Für die Wahrnehmung dieser Rechte bedarf es nicht
des Abschlusses dieses Lizenzvertrags.

Abschnitt 5: Haftung und Gewährleistung
---------------------------------------

§ 13: Haftung und Gewährleistung
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Die Haftung des Lizenzgebers Ihnen gegenüber beschränkt sich auf das
arglistige Verschweigen von Mängeln.

§ 14: Haftung bei Ansprüchen Dritter
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Werden die Vertragsparteien einzeln oder gemeinsam durch Dritte wegen
des Inhalts des Werkes auf Schadensersatz und/oder Kosten einer
Rechtsverfolgung in Anspruch genommen, so haftet jede Partei im
Innenverhältnis entsprechend dem Anteil ihres eigenen Verschuldens. Der
Lizenznehmer haftet alleine, wenn der Lizenzgeber in dem Werk eine
Quelle angegeben hat, unter der er nachträgliche inhaltliche Korrekturen
aufführt, und diejenigen Inhalte, die den Gegenstand der Inanspruchnahme
durch Dritte bilden, unter dieser Quelle zum Zeitpunkt der
Verletzungshandlung bereits korrigiert oder gelöscht waren.

Abschnitt 6: Der Lizenzvertrag
------------------------------

§ 15: Verhältnis der beiden Versionen
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Dieser Lizenzvertrag ist in deutscher und englischer Sprache abgefasst.
Beide Fassungen sind gleich verbindlich. Es wird unterstellt, dass die
in dem Lizenzvertrag verwandten Begriffe in beiden Fassungen die gleiche
Bedeutung haben. Ergeben sich dennoch Unterschiede, so ist die Bedeutung
maßgeblich, welche die Fassungen unter Berücksichtigung des Ziels und
Zwecks des Lizenzvertrags am besten miteinander in Einklang bringt.

§ 16: Neue Versionen des Lizenzvertrags
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Das Ministerium für Wissenschaft und Forschung Nordrhein-Westfalen kann
mit verbindlicher Wirkung neue Versionen des Lizenzvertrags in Kraft
setzen, soweit dies erforderlich und zumutbar ist. Neue Versionen des
Lizenzvertrags werden auf der Internetseite https://lizenzen.hbz-nrw.de/ mit
einer eindeutigen Versionsnummer veröffentlicht. Die neue Version des
Lizenzvertrags erlangt für Sie verbindliche Wirkung, wenn Sie von deren
Veröffentlichung Kenntnis genommen haben. Gesetzliche Rechtsbehelfe
gegen die Änderung des Lizenzvertrags werden durch die vorstehenden
Bestimmungen nicht beschränkt.

(3) Sie dürfen diesen Lizenzvertrag in unveränderter Form
vervielfältigen, verbreiten und öffentlich zugänglich machen.

§ 17: Anwendbares Recht
~~~~~~~~~~~~~~~~~~~~~~~

Auf diesen Lizenzvertrag findet deutsches Recht Anwendung.

Anhang
------

Um jedermann den Abschluss dieses Lizenzvertrages zu ermöglichen, wird
empfohlen, das Werk mit folgendem Hinweis auf den Lizenzvertrag zu
versehen:

    "Jedermann darf dieses Werk unter den Bedingungen der Freien DiPP Lizenz
    unverändert oder verändert verbreiten und zum Download bereitstellen.
    Der Lizenztext ist im `Internet <https://lizenzen.hbz-nrw.de/f-dppl/1.0/de>`__ abrufbar.